chore: update blog + links

--- a/src/app/articles/20250322/page.mdx
+++ b/src/app/articles/20250322/page.mdx
@@ -5,7 +5,7 @@ import image2 from './image2.png'
 
 export const article = {
   author: 'Aaron Kim',
-  date: 'Saturday, March 22, 2025',
+  date: 'Saturday | March 22, 2025',
   title: 'We Made a Beautiful Bouquet',
   description:
     'i watched a movie...',
@@ -18,28 +18,67 @@ export const metadata = {
 
 export default (props) => <ArticleLayout article={article} {...props} />
 
-<Image src={image} alt="" />
+<Image src={image} alt="" />  
 
-i might have just watched one of a very populated genre of movie in Japan, but in America we don't get movies like these very often.
+<br />  
+  
+i haven't seen any movies that made me feel this way. there's no fluff, no extraneous side plot or hamhanded message.
+it's almost not even a story. nothing feels dramatized, as if the director captured the essence of young, doomed love in a bottle and spilled it on the screen.
 
-the protagonists are relatable and strongly individual. they don't let themselves sacrifice who they are. they're not pushovers and i like that because i hate pushovers
-never seen a more realistic depiction of a healthy relationship having to end because the two are just in different life stages. 
+<br />  
 
-this movie made me want to never lose who i am in service of some asshole boss or some stupid job or some insane friend. i'm me and i like what i like and nothing will ever change that. 
-mugi and kinu loved each other because they each were passionate about the same things. in the end, it was mugi's inability to just be himself and let go of everyone else's opinion, 
-whether it be his dad, kinu's mom, or his friends', and to just listen to kinu, that was their downfall.
+the protagonists are both relatable and strongly individual. they don't let themselves sacrifice who they are. they're not pushovers and i like that because i hate pushovers.
+never seen a more realistic depiction of a healthy relationship having to end because the two are just in different life stages and come from different backgrounds.  
+  
+<br />  
+
+this movie made me want to never lose who i am to please anyone. i'm me and i like what i like and nothing will ever change that. 
+mugi and kinu loved each other because they each were passionate about the same things. 
+in the end, it was mugi's inability to just be himself and let go of everyone else's opinions.
+whether it be his dad's judgment, kinu's mom's outdated view on jobs and life, or the way his friends see him, all mugi had to do was just listen to kinu.
+  
+<br />  
+
+i've noticed that most guys tend to have trouble taking their partner's word at face value. 
+many times i've heard stories of men with some insecurity (often related to finance or effort put forth in a relationship) try to overcompensate for their perceived weakness.
+i have also fallen prey to this trap. societal pressures often push us to think we have to demonstrate how perfect we can be, peacock as hard as we can muster, just so that our partners will be happy.
+the sad part is not that we think we have to put in this effort, but rather that most of the time, this elevated effort isn't necessary in the first place. 
+
+<br />  
+
+not every woman is some cruel piece of work with unattainably tall standards. believe it or not, most women actually communicate how they're feeling to us. 
+but our insecurities blind us, and for some reason we just get this gut feeling that they're not telling the truth. how could they be? they must be concealing their true feelings in fear of ours getting hurt, 
+or maybe they're pitying us! this toxic pattern of thinking can lead to all manner of misunderstandings, and often manifests itself in the form of the man continuing to do something that 
+he feels is necessary and that he thinks will be appreciated by his partner, when in reality it wasn't asked for at all and only brings them apart.
+
+<br />  
+
+mugi was also this man. kinu told him repeatedly that she was happy, that she didn't need him to work some dead-end job that would rob them of their time together.
+she expressed to him how much she loved the way things were, and she did so in earnest. yet, her mother's words and his father's financial pullout got to him. 
+he adopted their philosophies: work is life, and without money we can't survive. he sacrificed the one thing that made both of them happy: their time together, sharing their passions.
+that was their downfall.  
+
+<br />  
 
 life only gets more difficult if you believe it will. if you don't believe it will, and only focus on what you enjoy, you will never have to face that terrible
-filter that strains out your youth and makes you into third-act mugi. 
+filter that strains out your whimsy and morphs you into third-act mugi. 
 
-relationships aren't always perfect, and they also aren't always super romantic.
+<br />  
 
+relationships aren't always perfect, and they also aren't always super romantic.<br />  
 this movie tackles these themes through its own unique, sobering, and youthful lens.
 
-it spoke to me because i also never want to let go of what makes me unique, what keeps me youthful and undeterred. kinu never loses her spirit, and neither does the camera.
-the lack of music feels like a walk in a cold morning in tokyo. it makes it special. the sound of wind. 
+<br />  
+
+it spoke to me because i also never want to let go of what makes me unique, what keeps me youthful and undeterred.   
+kinu never loses her spirit, and neither does the camera. i can do this too.  
+the lack of music makes the cinematography feel like a walk in a cold tokyo morning.  
+  
+<br />  
 
 <Image src={image2} alt="" />
-
-i'm going to print this poster and hang it in my room as a reminder - a reminder never to lose what makes me youthful or makes my vision wondrous.
+  
+<br />  
+i'm going to print this poster and hang it in my room because it looks nice...   
+but also as a reminder to never lose my childlike creativity and wonder.  
 i don't have to ever lose what makes me, me. 
